# cca-f-study

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  app.py  db.py  generate_markdown.py  pyproject.toml  seed.py  seed_data_v10_original_2026_06.json  seed_data_v11_exam_guide_v0_2.json  seed_data_v12_guide_gap_fill.json  selection.py
.claude/commands/: add-question.md
.claude/rules/: python.md
archive/: seed_data_v10_original_2026_06.json
archive/newq_v11/: newq_agentic.json  newq_claude_code.json  newq_context.json  newq_prompt_eng.json  newq_tool_mcp.json
docs/: SETUP.md  exam-guide-coverage.md  exam-guide-v0.2-alignment.md
prompts/: README.md  cca-f-tutor-prompt.md
scripts/: add_guide_sections.py  assemble_new_bank.py  build_v11_bank.py
static/: style.css
templates/: _doc_links.html  add.html  base.html  empty.html  exam.html  exam_question.html  exam_result.html  index.html  question.html  questions.html  result.html  stats.html
tests/: conftest.py  test_anti_pattern.py  test_doc_links.py  test_exam.py  test_unanswered.py  test_weighted.py
