[project]
name = "cca-f-study"
version = "0.1.0"
description = "Local study app for the Claude Certified Architect – Foundations exam."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "python-multipart>=0.0.12",
    "starlette>=1.0.1",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
